@@ -8,6 +8,7 @@ Release 1.0
 * Added $maxrows_method variable that is used to control the mechanism that
   jsqsh uses to limit row results. This added because I discovered that 
   setting the row limit in some JDBC drivers caused unwanted side effects.
+* Added \procs command to display list of procedures in the current database.
 * Added PL/SQL analyzer so that semicolon termination can be used against
   Oracle. 
 * Improved formatting of number datatypes (tinyint, int, short, bigint,
